Added ansible galaxy webhook to travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,6 @@ script:
 
 after_script:
   - sudo docker stop centos-${OS_VERSION}
+
+notifications:
+  webhooks: https://galaxy.ansible.com/api/v1/notifications/
