--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -21,5 +21,5 @@
     option: priority
     value: "{{ item.1.priority }}"
   with_subelements:
-    - repositories
+    - "{{ repositories }}"
     - priorities
